Reorganize the code so that only SparkLauncher is public.
This gets rid of LauncherCommon and AbstractLauncher so that there's only
one public class (*) in the library. The other "launchers" were renamed
to match what they actually do (build commands), and extend the public
SparkLauncher (which actually can launch things).

Shell handling code was moved into the Main class, since that's the only
place that should care about shells.

CommandUtils is currently broken, since it still expects AbstractLauncher
to be around; that will be fixed separately. The (*) refers to
SparkSubmitOptionParser, which is still public, but will receive
a similar privatizing treatment soon.